# e-SparX

./: .dockerignore  .gitignore  ArtifactInfo.ts  ArtifactsInfo.ts  ArtifactsService.ts  CITATION.cff  CancelablePromise.ts  Dev_README.md  README.md  dev.docker-compose.yml  docker-compose.yml  starter_notebook.ipynb
backend/: .gitignore  README.md  dockerfile  pyproject.toml
backend/edl_api/: __init__.py  __main__.py  app.py  settings.py
backend/edl_api/dagdb/: session.py
backend/edl_api/dependencies/: auth.py
backend/edl_api/documentdb/: client.py
backend/edl_api/routes/: __init__.py  artifacts.py  code.py  connections.py  data.py  hyperparameters.py  models.py  parameters.py  pipelines.py  register.py  results.py  scripts.py
backend/edl_api/schemas/: __init__.py  artifacts.py  connections.py  dag.py
backend/esparx_api/: __init__.py  __main__.py  app.py
backend/esparx_api/dagdb/: __init__.py  session.py
backend/esparx_api/dependencies/: __init__.py  auth.py
backend/esparx_api/documentdb/: __init__.py  client.py
backend/esparx_api/routes/: __init__.py  artifacts.py  connections.py  pipelines.py  register.py
backend/esparx_api/schemas/: __init__.py  artifacts.py  dag.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0c106357b494_add_owner_id.py  191408650fac_new_get_all_method_for_global_dag_view.py  19caff278618_add_connection_logic.py  204e81d9f5a4_add_node_pipeline_and_connection_table.py  2155b768ef97_add_connection_logic.py  27a743c1b232_fix_ondelete_behavior.py  348fe7dffbaf_small_fix_response_model.py  485e01769f70_rename_script_to_code.py  6e57773bb501_fetch_all_connections.py  a12f1b78beca_add_artifact_type_to_dagdb_data.py  a54edcd3be78_fix_ondelete_behavior.py  b9bbbab976a3_fix_connections.py  bd7a3169c1d9_fix_on_delete_behaviour.py
frontend/: .gitignore  README.md  dockerfile  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: ArtifactNode.tsx  Button.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx
frontend/src/lib/: api.ts
infrastructure/proxy/: default.conf
python_api/: .gitignore  README.md  pyproject.toml
python_api/energy_data_lab/: __init__.py  create_connection.py  register.py  register_data.py  register_hyperparameters.py  register_model.py  register_results.py  register_script.py
python_api/energydatalab/: __init__.py  _client.py  _user_config.py  create_connection.py  delete_artifact.py  register_code.py  register_data.py  register_dataset.py  register_hyperparameters.py  register_model.py  register_parameters.py  register_results.py
python_api/esparx/: _client.py  _logging.py  _user_config.py  create_connection.py  delete.py  init_pipeline.py  register_code.py  register_dataset.py  register_hyperparameters.py  register_model.py  register_parameters.py  register_results.py
scripts/: gen_tsAPIclientcode.py
usecases/: .gitignore  README.md  pipeline_ex1.py  requirements.txt
usecases/ess_control/src/: a_retrieve_price_data.py  b_train_and_deploy.ipynb
usecases/wpf/: demonstrate_artifact_deletion.ipynb  demonstrate_artifact_updating.ipynb  pipeline_ex1.py  pipeline_ex2.py  playground.py  register_all.py  register_raw_data.py  requirements.txt
usecases/wpf/hyperparameters/: mlp.json
usecases/wpf/models/: MLP.pth
usecases/wpf/src/: 01_retrieve_weather_data.py  02_preprocess_power_data.py  03_clean_norm_data.ipynb  04_main.py  05_inspect_results.ipynb  main.py  playground.py  (+1 more)
(+105 files in other folders)
