[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energydatalab"
version = "0.1"
description = "An ML artifact registry for the energy transition."
readme = "README.md"
requires-python = ">=3.7"

# Dependencies for your package
dependencies = [
    "requests",
    "pandas",
    "mlflow",
    "pydantic",
    "platformdirs"
]

[project.scripts]
edl-pipeline-init = "energydatalab.init_pipeline:init_pipeline_cli"

